[gd_scene load_steps=32 format=2]

[ext_resource path="res://forms/AdminForm/AdminForm.gd" type="Script" id=1]
[ext_resource path="res://assets/images/PCF_Logo.png" type="Texture" id=2]
[ext_resource path="res://audio/audio_stream_random_player.gd" type="Script" id=3]
[ext_resource path="res://containers/AdminContainer/AdminContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://containers/ClubContainer/ClubContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://dialogs/new_dialogs/SettingsDialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://containers/TransferMarketContainer/TransferMarketContainer.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/UI/AdminBadge.svg" type="Texture" id=8]
[ext_resource path="res://containers/TransactionsContainer/TransactionsContainer.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui_classes/TabButtons.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/images/UI/Clubs.svg" type="Texture" id=11]
[ext_resource path="res://dialogs/add_member_dialog.tscn" type="PackedScene" id=13]
[ext_resource path="res://containers/UserContainer/UserContainer.tscn" type="PackedScene" id=14]
[ext_resource path="res://dialogs/edit_club_dialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://dialogs/create_club_dialog.tscn" type="PackedScene" id=18]
[ext_resource path="res://dialogs/join_club_dialog.tscn" type="PackedScene" id=19]
[ext_resource path="res://dialogs/edit_user_dialog.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/images/UI/Users.svg" type="Texture" id=21]
[ext_resource path="res://assets/music/music1.mp3" type="AudioStream" id=22]
[ext_resource path="res://assets/images/UI/Marketplace.svg" type="Texture" id=23]
[ext_resource path="res://themes/default_theme.tres" type="Theme" id=24]
[ext_resource path="res://assets/music/music2.mp3" type="AudioStream" id=25]
[ext_resource path="res://assets/music/music4.mp3" type="AudioStream" id=26]
[ext_resource path="res://assets/music/music3.mp3" type="AudioStream" id=27]
[ext_resource path="res://assets/images/UI/Transactions.svg" type="Texture" id=28]
[ext_resource path="res://dialogs/new_dialogs/join_dialog.tscn" type="PackedScene" id=30]
[ext_resource path="res://dialogs/new_dialogs/WelcomeDialog.tscn" type="PackedScene" id=32]

[sub_resource type="Gradient" id=8]
interpolation_mode = 2
colors = PoolColorArray( 0.158875, 0.314679, 0.535156, 1, 0, 0.028, 0.28, 1 )

[sub_resource type="GradientTexture2D" id=11]
gradient = SubResource( 8 )
use_hdr = true

[sub_resource type="StyleBoxTexture" id=10]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
texture = SubResource( 11 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="ButtonGroup" id=12]

[node name="AdminForm" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 24 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )

[node name="VB" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10

[node name="Header" type="PanelContainer" parent="Panel/VB"]
margin_right = 1346.0
margin_bottom = 62.0
__meta__ = {
"_edit_lock_": true
}

[node name="HB" type="HBoxContainer" parent="Panel/VB/Header"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1336.0
margin_bottom = 52.0

[node name="Logo" type="TextureRect" parent="Panel/VB/Header/HB"]
margin_right = 45.0
margin_bottom = 42.0
rect_min_size = Vector2( 45, 29 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/VB/Header/HB"]
margin_left = 49.0
margin_right = 196.0
margin_bottom = 42.0
size_flags_vertical = 3
theme_type_variation = "Titles"
text = "dashboard"
align = 1
valign = 1
uppercase = true

[node name="AccountBtn" type="MenuButton" parent="Panel/VB/Header/HB"]
margin_left = 1231.0
margin_right = 1326.0
margin_bottom = 42.0
rect_min_size = Vector2( 95, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
text = "Name"
icon = ExtResource( 8 )
flat = false
items = [ "Refresh", null, 0, false, false, 0, 0, null, "", false, "Settings", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Log Out", null, 0, false, false, 3, 0, null, "", false ]

[node name="PC" type="PanelContainer" parent="Panel/VB"]
margin_top = 72.0
margin_right = 1346.0
margin_bottom = 748.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VB" type="VBoxContainer" parent="Panel/VB/PC"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1336.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="TabButtons" type="HBoxContainer" parent="Panel/VB/PC/VB"]
margin_right = 1326.0
margin_bottom = 35.0
__meta__ = {
"_edit_lock_": true
}

[node name="UserBtn" parent="Panel/VB/PC/VB/TabButtons" instance=ExtResource( 10 )]
margin_right = 262.0
margin_bottom = 35.0
pressed = true
group = SubResource( 12 )
text = "User"
icon = ExtResource( 21 )
tab_container = NodePath("../../TabContainer")

[node name="ClubBtn" parent="Panel/VB/PC/VB/TabButtons" instance=ExtResource( 10 )]
margin_left = 266.0
margin_right = 528.0
margin_bottom = 35.0
mouse_filter = 1
group = SubResource( 12 )
text = "Club"
icon = ExtResource( 11 )
tab_container = NodePath("../../TabContainer")

[node name="MarketplaceBtn" parent="Panel/VB/PC/VB/TabButtons" instance=ExtResource( 10 )]
margin_left = 532.0
margin_right = 794.0
margin_bottom = 35.0
mouse_filter = 1
group = SubResource( 12 )
text = "Transfer Market"
icon = ExtResource( 23 )
tab_container = NodePath("../../TabContainer")

[node name="TransactionsBtn" parent="Panel/VB/PC/VB/TabButtons" instance=ExtResource( 10 )]
margin_left = 798.0
margin_right = 1060.0
margin_bottom = 35.0
mouse_filter = 1
group = SubResource( 12 )
text = "Transactions"
icon = ExtResource( 28 )
tab_container = NodePath("../../TabContainer")

[node name="AdminBtn" parent="Panel/VB/PC/VB/TabButtons" instance=ExtResource( 10 )]
margin_left = 1064.0
margin_right = 1326.0
margin_bottom = 35.0
mouse_filter = 1
group = SubResource( 12 )
text = "Admin"
icon = ExtResource( 8 )
tab_container = NodePath("../../TabContainer")

[node name="TabContainer" type="TabContainer" parent="Panel/VB/PC/VB"]
show_behind_parent = true
margin_top = 35.0
margin_right = 1326.0
margin_bottom = 656.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
tabs_visible = false
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserContainer" parent="Panel/VB/PC/VB/TabContainer" instance=ExtResource( 14 )]

[node name="ClubContainer" parent="Panel/VB/PC/VB/TabContainer" instance=ExtResource( 5 )]
visible = false

[node name="TransferMarketContainer" parent="Panel/VB/PC/VB/TabContainer" instance=ExtResource( 7 )]

[node name="TransactionsContainer" parent="Panel/VB/PC/VB/TabContainer" instance=ExtResource( 9 )]

[node name="AdminContainer" parent="Panel/VB/PC/VB/TabContainer" instance=ExtResource( 4 )]
visible = false

[node name="Modals" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CreateClubModal" parent="Modals" instance=ExtResource( 18 )]
margin_left = -233.0
margin_top = -140.0
margin_right = 233.0
margin_bottom = 140.0
__meta__ = {
"_edit_group_": true
}

[node name="AddMemberModal" parent="Modals" instance=ExtResource( 13 )]
margin_left = -215.0
margin_top = -112.0
margin_right = 215.0
margin_bottom = 112.0
__meta__ = {
"_edit_group_": true
}

[node name="JoinClubModal" parent="Modals" instance=ExtResource( 19 )]
margin_left = -160.0
margin_right = 160.0
margin_bottom = 56.0
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}

[node name="EditClubModal" parent="Modals" instance=ExtResource( 15 )]
visible = false
margin_left = -247.0
margin_top = -124.0
margin_right = 247.0
margin_bottom = 124.0

[node name="EditUserModal" parent="Modals" instance=ExtResource( 20 )]
visible = false
margin_left = -207.0
margin_top = -63.0
margin_right = 189.0
margin_bottom = 36.0
__meta__ = {
"_edit_group_": true
}

[node name="AudioStreamRandomPlayer" type="AudioStreamPlayer" parent="." groups=["audio_players"]]
stream = ExtResource( 22 )
bus = "Music"
script = ExtResource( 3 )
audio_stream_list = [ ExtResource( 22 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 26 ) ]

[node name="NextGenDialogs" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="WelcomeDialog" parent="NextGenDialogs" instance=ExtResource( 32 )]
visible = false

[node name="ApplyClubDialog" parent="NextGenDialogs" instance=ExtResource( 30 )]
visible = false

[node name="SettingsDialog" parent="NextGenDialogs" instance=ExtResource( 6 )]
visible = false

[connection signal="finished" from="AudioStreamRandomPlayer" to="AudioStreamRandomPlayer" method="_on_AudioStreamRandomPlayer_finished"]
